# CUDA-Path-Tracer

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  build_optix.bat
cmake/: FindOptix.cmake
scenes/: bunny.mtl  combined.mtl  cornell.json  cornell.mtl  scene.json  sphere.json
src/: bvh.cu  bvh.h  cuda_utilities.cu  cuda_utilities.h  interactions.cu  interactions.h  intersections.cu  intersections.h  main.cpp  main.h  pathtrace.cu  pathtrace.h  pathtrace_wavefront.cu  pathtrace_wavefront.h  preview.cpp  rng.h  scene.cpp  scene.h  sceneStructs.h  tiny_obj_loader.h  utilities.h  wavefront_internal.cu  wavefront_internal.h
src/common/: cuda_utilities.h  utilities.cpp  utilities.h
src/kernels/: logic.cu  logic.h  ray_cast.cu  ray_cast.h  ray_gen.cu  ray_gen.h  shading.cu  shading.h  svgf.cu  svgf.h
src/optix/: optix_kernels.cu  optix_ray_cast.cu  optix_ray_cast.h  optix_structs.h
